# PAES-QT

./: Makefile  PAES  PAES.pro.user.4e542b1  PAES.pro.user.6a12ef9  README.md  arms.cpp  back.cpp  bejewgamescene.ui  bejewview.ui  canvas.h  dbmanager.cpp  detect_shapes  draggablelabel.h  exercises.h  games.cpp  games.h  keypressheader.cpp  legs.ui  login.cpp  login.ui  matchshapes.cpp  matchshapes.h  matchshapes.ui  minegame.cpp  minegame.h  minegame.ui  minegamescene.cpp  minegamescene.ui  mineview.cpp  mineview.ui  moc_back.cpp  moc_shoulders.cpp  qmake_qmake_qm_files.qrc  rectitem.ui  register.h  register.ui  requirements.txt  resource.qrc  scribblearea.cpp  scribblearea.h  (+13 more)
PAES-QT-SRC/: AppExitEater.h  CMakeCache.txt  Makefile  MongoInstance.h  PAES  PAES.pro  PAES.pro.user.b162203  PAES.pro.user.ec7b56d  bejewgame.cpp  bejewgame.h  bejewgame.ui  bejewgamescene.cpp  bejewgamescene.h  bejewview.cpp  bejewview.h  canvas.cpp  canvas.ui  cmake_install.cmake  dbmanager.h  detect_shapes  draggablelabel.cpp  exercises.cpp  exercises.ui  games.ui  keypressheader.h  legs.cpp  legs.h  login.cpp  login.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  minegamescene.h  mineview.h  moc_arms.cpp  moc_legs.cpp  moc_worker_exercise.cpp  qrc_qmake_qmake_qm_files.cpp  register.cpp  (+18 more)
PAES-QT-SRC/onnx_pose/: config.json  pose_generator.cpp
PAES-QT-SRC/rf/: qt_pose.cpp  rf_onxx_old.py
images/: hand
onnx_pose/: CMakeLists.txt  config.json  pose_generator.cpp
onnx_pose/src/: processFrame.cpp  processFrame.h
rf/: a.out  a.py  rf_onxx.py
(+2 files in other folders)
